data/derived/fa15/progs/unify/prog1263.ml.out
Characters 14-20:
  let _ = del 4 testee;;
                ^^^^^^
Error: This expression has type int set
       but an expression was expected of type string set
       Type int is not compatible with type string 
